--- a/KF.Services/KF.Services.csproj
+++ b/KF.Services/KF.Services.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper" Version="11.0.1" />
-    <PackageReference Include="FluentValidation" Version="11.2.1" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\KF.CommonModel\KF.CommonModel.csproj" />
     <ProjectReference Include="..\KF.Core\KF.Core.csproj" />
   </ItemGroup>
 
