--- a/KF.Services/KF.Services.csproj
+++ b/KF.Services/KF.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\KF.CommonModel\KF.CommonModel.csproj" />
     <ProjectReference Include="..\KF.Core\KF.Core.csproj" />
   </ItemGroup>
