--- a/KF.WebApi/appsettings.json
+++ b/KF.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=ADISABAULAPDELL;Database=KronsoftFarma;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
